--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "typescript": "5.6.2",
     "@types/node": "20.14.11"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "packageManager": "pnpm@9.5.0"
 }
